    - Use 2.4.25 kernels for mips and mipsel.
  * Joshua Kwan
    - Add all sorts of sparc/sparc64 floppy support, with a net-drivers
      disk for sparc64.
    - Add cdrom-core-modules dependency for cdrom/sparc.cfg.
  * Bastian Blank
    - Respect EXTRANAME in kernel installation. (closes: #244209)
    - Add s390 to build/choose-subarch-env.
    - Use make magic to pull that script in.

 -- Bastian Blank <waldi@debian.org>  Sun, 18 Apr 2004 20:23:16 +0200

debian-installer (20040411) unstable; urgency=low

  * Colin Watson
    - Add powerpc support for monolithic image type, for the powerpc subarch
      only since it's quite large and mostly useful for testing. Disabled
      for the moment until new kernel packages arrive in the archive.
    - Fix up powerpc CD image targets, which had bitrotted (a number of the
      variables they used weren't defined).
  * Martin Michlmayr
    - Clarify description of mips/sb1-swarm-bn's netboot images.
  * Bastian Blank
    - Split tree target.
    - Add generic and s390-tape type.
    - Build generic and tape medium on s390.
    - Move correct kernel images.
    - Add s390 boot files.
    - s390 uses 2.4.25-1 kernels.
  * Joey Hess
    - Some reworking of the syslinux help screens.
    - Widen the non-US exclusion regexp, fix FTBFS on gag.com arm autobuilder.
    - Deal better with duplicate udebs.

 -- Joey Hess <joeyh@debian.org>  Sun, 11 Apr 2004 19:09:43 -0400

debian-installer (20040405) unstable; urgency=low

  * The "will voltaire SIGILL today?" release.

  * Karsten Merker
    - Include DEC keymaps on mipsel.
  * Bastian Blank
    - Make daily-build a little bit more reliable.
  * Martin Michlmayr
    - Add better sucharchitecture handling for choosing which udebs
      to include on different images.
    - Only include DEC keymaps on DECstations (r3k-kn02 and r4k-kn04).
    - Include discover on the netboot images on the Broadcom SWARM and
      on MIPS based Cobalt machines.