@@ -33,6 +33,9 @@ debian-installer (20040417) UNRELEASED; urgency=low
     - Respect EXTRANAME in kernel installation. (closes: #244209)
     - Add s390 to build/choose-subarch-env.
     - Use make magic to pull that script in.
+  * Per Olofsson
+    - Don't do PCMCIA config reduction as it doesn't take enough modules
+      into account. Closes: #243563.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 18 Apr 2004 20:23:16 +0200
 
